fix for input staying visible after build

--- a/client/assets/styles/scss/pages/setup.scss
+++ b/client/assets/styles/scss/pages/setup.scss
@@ -34,10 +34,10 @@
   transform-origin: 50% 0;
   transition: all .2s ease-in;
   width: calc(100% - 30px);
-  z-index: $z-popover;
 
   &.in {
     transform: translate3d(0,0,0);
+    z-index: $z-header - 2;
 
     ~ form {
 
@@ -170,7 +170,7 @@
 
   .input-container {
     position: relative;
-    z-index: $z-show;
+    z-index: $z-header - 1;
 
     > .btn-icon {
       color: $gray-dark;
